# legion-a2a

./: LICENSE  Makefile  README.md  main.py  pyproject.toml  setup.cfg  setup.py  test_legion_a2a.py
examples/: dataclass_example.py  pydantic_v2_example.py  run_examples.sh
scripts/: generate_models.sh
specs/python/: a2a.py
specs/python/datatype/: __init__.py
